; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_rt5663.c_rt5663_set_tdm_slot.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_rt5663.c_rt5663_set_tdm_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dai = type { %struct.snd_soc_component* }
%struct.snd_soc_component = type { i32 }
%struct.rt5663_priv = type { i32 }

@RT5663_TDM_MODE_TDM = common dso_local global i32 0, align 4
@RT5663_TDM_IN_CH_4 = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_CH_4 = common dso_local global i32 0, align 4
@RT5663_TDM_IN_CH_6 = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_CH_6 = common dso_local global i32 0, align 4
@RT5663_TDM_IN_CH_8 = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_CH_8 = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@RT5663_TDM_IN_LEN_20 = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_LEN_20 = common dso_local global i32 0, align 4
@RT5663_TDM_IN_LEN_24 = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_LEN_24 = common dso_local global i32 0, align 4
@RT5663_TDM_IN_LEN_32 = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_LEN_32 = common dso_local global i32 0, align 4
@RT5663_TDM_2 = common dso_local global i32 0, align 4
@RT5663_TDM_1 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Unknown CODEC Version\0A\00", align 1
@RT5663_TDM_MODE_MASK = common dso_local global i32 0, align 4
@RT5663_TDM_IN_CH_MASK = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_CH_MASK = common dso_local global i32 0, align 4
@RT5663_TDM_IN_LEN_MASK = common dso_local global i32 0, align 4
@RT5663_TDM_OUT_LEN_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dai*, i32, i32, i32, i32)* @rt5663_set_tdm_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt5663_set_tdm_slot(%struct.snd_soc_dai* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.snd_soc_dai*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.snd_soc_component*, align 8
  %13 = alloca %struct.rt5663_priv*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.snd_soc_dai* %0, %struct.snd_soc_dai** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %16 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %7, align 8
  %17 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %16, i32 0, i32 0
  %18 = load %struct.snd_soc_component*, %struct.snd_soc_component** %17, align 8
  store %struct.snd_soc_component* %18, %struct.snd_soc_component** %12, align 8
  %19 = load %struct.snd_soc_component*, %struct.snd_soc_component** %12, align 8
  %20 = call %struct.rt5663_priv* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %19)
  store %struct.rt5663_priv* %20, %struct.rt5663_priv** %13, align 8
  store i32 0, i32* %14, align 4
  %21 = load i32, i32* %9, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %5
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %23, %5
  %27 = load i32, i32* @RT5663_TDM_MODE_TDM, align 4
  %28 = load i32, i32* %14, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %14, align 4
  br label %30

30:                                               ; preds = %26, %23
  %31 = load i32, i32* %10, align 4
  switch i32 %31, label %54 [
    i32 4, label %32
    i32 6, label %39
    i32 8, label %46
    i32 2, label %53
  ]

32:                                               ; preds = %30
  %33 = load i32, i32* @RT5663_TDM_IN_CH_4, align 4
  %34 = load i32, i32* %14, align 4
  %35 = or i32 %34, %33
  store i32 %35, i32* %14, align 4
  %36 = load i32, i32* @RT5663_TDM_OUT_CH_4, align 4
  %37 = load i32, i32* %14, align 4
  %38 = or i32 %37, %36
  store i32 %38, i32* %14, align 4
  br label %57

39:                                               ; preds = %30
  %40 = load i32, i32* @RT5663_TDM_IN_CH_6, align 4
  %41 = load i32, i32* %14, align 4
  %42 = or i32 %41, %40
  store i32 %42, i32* %14, align 4
  %43 = load i32, i32* @RT5663_TDM_OUT_CH_6, align 4
  %44 = load i32, i32* %14, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %14, align 4
  br label %57

46:                                               ; preds = %30
  %47 = load i32, i32* @RT5663_TDM_IN_CH_8, align 4
  %48 = load i32, i32* %14, align 4
  %49 = or i32 %48, %47
  store i32 %49, i32* %14, align 4
  %50 = load i32, i32* @RT5663_TDM_OUT_CH_8, align 4
  %51 = load i32, i32* %14, align 4
  %52 = or i32 %51, %50
  store i32 %52, i32* %14, align 4
  br label %57

53:                                               ; preds = %30
  br label %57

54:                                               ; preds = %30
  %55 = load i32, i32* @EINVAL, align 4
  %56 = sub nsw i32 0, %55
  store i32 %56, i32* %6, align 4
  br label %113

57:                                               ; preds = %53, %46, %39, %32
  %58 = load i32, i32* %11, align 4
  switch i32 %58, label %81 [
    i32 20, label %59
    i32 24, label %66
    i32 32, label %73
    i32 16, label %80
  ]

59:                                               ; preds = %57
  %60 = load i32, i32* @RT5663_TDM_IN_LEN_20, align 4
  %61 = load i32, i32* %14, align 4
  %62 = or i32 %61, %60
  store i32 %62, i32* %14, align 4
  %63 = load i32, i32* @RT5663_TDM_OUT_LEN_20, align 4
  %64 = load i32, i32* %14, align 4
  %65 = or i32 %64, %63
  store i32 %65, i32* %14, align 4
  br label %84

66:                                               ; preds = %57
  %67 = load i32, i32* @RT5663_TDM_IN_LEN_24, align 4
  %68 = load i32, i32* %14, align 4
  %69 = or i32 %68, %67
  store i32 %69, i32* %14, align 4
  %70 = load i32, i32* @RT5663_TDM_OUT_LEN_24, align 4
  %71 = load i32, i32* %14, align 4
  %72 = or i32 %71, %70
  store i32 %72, i32* %14, align 4
  br label %84

73:                                               ; preds = %57
  %74 = load i32, i32* @RT5663_TDM_IN_LEN_32, align 4
  %75 = load i32, i32* %14, align 4
  %76 = or i32 %75, %74
  store i32 %76, i32* %14, align 4
  %77 = load i32, i32* @RT5663_TDM_OUT_LEN_32, align 4
  %78 = load i32, i32* %14, align 4
  %79 = or i32 %78, %77
  store i32 %79, i32* %14, align 4
  br label %84

80:                                               ; preds = %57
  br label %84

81:                                               ; preds = %57
  %82 = load i32, i32* @EINVAL, align 4
  %83 = sub nsw i32 0, %82
  store i32 %83, i32* %6, align 4
  br label %113

84:                                               ; preds = %80, %73, %66, %59
  %85 = load %struct.rt5663_priv*, %struct.rt5663_priv** %13, align 8
  %86 = getelementptr inbounds %struct.rt5663_priv, %struct.rt5663_priv* %85, i32 0, i32 0
  %87 = load i32, i32* %86, align 4
  switch i32 %87, label %92 [
    i32 128, label %88
    i32 129, label %90
  ]

88:                                               ; preds = %84
  %89 = load i32, i32* @RT5663_TDM_2, align 4
  store i32 %89, i32* %15, align 4
  br label %99

90:                                               ; preds = %84
  %91 = load i32, i32* @RT5663_TDM_1, align 4
  store i32 %91, i32* %15, align 4
  br label %99

92:                                               ; preds = %84
  %93 = load %struct.snd_soc_component*, %struct.snd_soc_component** %12, align 8
  %94 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %93, i32 0, i32 0
  %95 = load i32, i32* %94, align 4
  %96 = call i32 @dev_err(i32 %95, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %97 = load i32, i32* @EINVAL, align 4
  %98 = sub nsw i32 0, %97
  store i32 %98, i32* %6, align 4
  br label %113

99:                                               ; preds = %90, %88
  %100 = load %struct.snd_soc_component*, %struct.snd_soc_component** %12, align 8
  %101 = load i32, i32* %15, align 4
  %102 = load i32, i32* @RT5663_TDM_MODE_MASK, align 4
  %103 = load i32, i32* @RT5663_TDM_IN_CH_MASK, align 4
  %104 = or i32 %102, %103
  %105 = load i32, i32* @RT5663_TDM_OUT_CH_MASK, align 4
  %106 = or i32 %104, %105
  %107 = load i32, i32* @RT5663_TDM_IN_LEN_MASK, align 4
  %108 = or i32 %106, %107
  %109 = load i32, i32* @RT5663_TDM_OUT_LEN_MASK, align 4
  %110 = or i32 %108, %109
  %111 = load i32, i32* %14, align 4
  %112 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %100, i32 %101, i32 %110, i32 %111)
  store i32 0, i32* %6, align 4
  br label %113

113:                                              ; preds = %99, %92, %81, %54
  %114 = load i32, i32* %6, align 4
  ret i32 %114
}

declare dso_local %struct.rt5663_priv* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @snd_soc_component_update_bits(%struct.snd_soc_component*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
